# Serika-Renderer-OpenGL

./: .clang-format  .gitignore  CMakeLists.txt  replace_pragma_once.py
.claude/: settings.local.json
Test/: CubeShadowTest.cpp  FeatureTestMain.cpp  TestMain.cpp
Test/Renderer/: CMakeLists.txt
Test/Renderer/src/: main.cpp
Test/Unit/: CMakeLists.txt
Test/Unit/src/: asset_manager_tests.cpp  asset_meta_tests.cpp  asset_types_tests.cpp
assets/models/mary/: mary.mtl
assets/models/nanosuit/: nanosuit.blend
assets/shader/: PhongMaterial.frag  Standard.frag  Standard.vert  default.frag  default.vert  fragmentShader.frag  light.frag  light.vert  lightedObject.frag  vertexShader.vert
assets/shader/Debug/BoundingBox/: bbox.frag  bbox.vert
assets/shader/Debug/WorldAxis/: DebugLine.frag
assets/shader/LightMap/: lightMap.frag  lightMap.vert
assets/shader/MultiLight/: multiLight.frag  multiLight.vert
assets/shader/Passes/: test.frag  test.vert
assets/shader/Passes/DefferedRendering/: DeferredShading_BaseColor.frag  DefferedShading_Blinn-Phong.frag  DefferedShading_Blinn-Phong.vert  DefferredShading_PBR.frag  Geometry.frag  Geometry.vert
assets/shader/Passes/LightPass/: LightBuffer.frag  LightBuffer.vert
assets/shader/Passes/PlainPass/: BaseColor.frag  BaseColor.vert  Blinn-Phong.frag  Blinn-Phong.vert  PlainPass.frag  PlainPass.vert  SkyBox.frag  SkyBox.vert
assets/shader/Passes/SSAO/: SSAO.frag  SSAO.vert  SSAOSmoother.frag
assets/shader/Passes/ShadowPass/: ShadowPass.frag  (+4 more)
assets/shader/Test/: ScreenPass.frag  ScreenPass.vert
assets/shader/nanosuit/: nanosuit.frag
configs/: renderConfig.json
docs/: architecture-analysis.md  asset-manager-design.md  asset-manager-proposal.md
include/: Buffer.h  BufferAttribute.h  Camera.h  ConfigPanel.h  FCamera.h  FScene.h  FrameBuffer.h  FrameBufferOpenGL.h  GUIPanel.h  Geometry.h  Light.h  Material.h  Model.h  Object.h  OrbitController.h  Renderer.h  RendererOpenGL.h  ResourceLoader.h  Scene.h  Shader.h  ShaderGLSL.h  Texture.h  TextureOpenGL.h  ULight.h  Uniform.h  UniformOpenGL.h  Viewer.h  ViewerOpenGL.h  app.h  learnOpenGL-aTriangle.h  primitives.h
include/Base/: Config.h  GLMInc.h  Globals.h  RenderStates.h  ResourceLoader.h  TextureTypeEnum.def  ThreadPool.h
include/Geometry/: BVHAccel.h  BoundingBox.h  BufferAttribute.h  Drawable.h  Geometry.h  Mesh.h  Model.h  Object.h  Primitives.h  Ray.h  Sphere.h  Triangle.h  UMesh.h  UObject.h
include/Material/: FMaterial.h  MaterialInfo.h  Shader.h  Texture.h  Uniform.h
include/OpenGL/: EnumsOpenGL.h  FrameBufferOpenGL.h  RendererOpenGL.h  ShaderGLSL.h  TextureOpenGL.h  UniformOpenGL.h  ViewerOpenGL.h
include/RenderPass/: RenderPass.h  RenderPassForwardShading.h  RenderPassGeometry.h  RenderPassLight.h  RenderPassLightCompute.h  RenderPassPlain.h  RenderPassShadow.h  RenderPassToScreen.h
include/Utils/: ImageUtils.h  Logger.h  OpenGLUtils.h  SRKLogger.h  UUID.h  UniversalUtils.h  utils.h
mods/Renderer/: CMakeLists.txt
mods/Renderer/include/: Application.h  Buffer.h  ConfigPanel.h  FCamera.h  FScene.h  FrameBuffer.h  OrbitController.h  Renderer.h  ULight.h  Viewer.h
mods/Renderer/include/Asset/: AssetDatabase.h  AssetManager.h  AssetMeta.h  AssetTypes.h
mods/Renderer/include/Base/: Config.h  Globals.h  Json.h  ProjectConfig.h  RenderStates.h  ResourceLoader.h  ThreadPool.h
mods/Renderer/include/Geometry/: BVHAccel.h  BoundingBox.h  BufferAttribute.h  Geometry.h  Object.h  Primitives.h  Ray.h  Sphere.h  Triangle.h  UMesh.h
mods/Renderer/include/Material/: FMaterial.h  Shader.h  Texture.h  Uniform.h
mods/Renderer/include/OpenGL/: EnumsOpenGL.h  FrameBufferOpenGL.h  RendererOpenGL.h  ShaderGLSL.h  TextureOpenGL.h  UniformOpenGL.h
mods/Renderer/include/RenderPass/: RenderPass.h  RenderPassForwardShading.h  RenderPassGeometry.h  RenderPassLight.h  RenderPassShadow.h
mods/Renderer/include/Utils/: ImageUtils.h  OpenGLUtils.h  SRKLogger.h  UUID.h  UniversalUtils.h
mods/Renderer/src/: Application.cpp  ConfigPanel.cpp  FCamera.cpp  FScene.cpp  OrbitController.cpp  Renderer.cpp  Texture.cpp  ULight.cpp  Viewer.cpp
mods/Renderer/src/Asset/: AssetDatabase.cpp  AssetManager.cpp  AssetMeta.cpp  AssetTypes.cpp
mods/Renderer/src/Base/: Config.cpp  FrameBuffer.cpp  Json.cpp  ProjectConfig.cpp  ResourceLoader.cpp  ThreadPool.cpp
mods/Renderer/src/Geometry/: BVHAccel.cpp  Geometry.cpp  Object.cpp  Primitives.cpp  Sphere.cpp  Triangle.cpp  UMesh.cpp
mods/Renderer/src/Materials/: FMaterial.cpp  Shader.cpp  Uniform.cpp
mods/Renderer/src/OpenGL/: FrameBufferOpenGL.cpp  RendererOpenGL.cpp  ShaderGLSL.cpp  TextureOpenGL.cpp  UniformOpengl.cpp
mods/Renderer/src/RenderPass/: RenderPassForwardShading.cpp  RenderPassGeometry.cpp  RenderPassLight.cpp  RenderPassShadow.cpp
mods/Renderer/src/Utils/: ImageUtils.cpp  OpenGLUtils.cpp  SRKLogger.cpp  UniversalUtils.cpp
src/: Camera.cpp  ConfigPanel.cpp  FCamera.cpp  FScene.cpp  FrameBuffer.cpp  FrameBufferOpenGL.cpp  GUIPanel.cpp  Geometry.cpp  Light.cpp  Model.cpp  Object.cpp  RenderPassOpenGL.cpp  Renderer.cpp  RendererOpenGL.cpp  ResourceLoader.cpp  Scene.cpp  Shader.cpp  ShaderGLSL.cpp  Texture.cpp  TextureOpenGL.cpp  ULight.cpp  UObject.cpp  Uniform.cpp  UniformOpengl.cpp  Viewer.cpp  ViewerOpenGL.cpp  app.cpp  glad.c  learnOpenGL-aTriangle.cpp  main.cpp  stb_image.cpp
src/Base/: Config.cpp  FrameBuffer.cpp  ResourceLoader.cpp  ThreadPool.cpp
src/Geometry/: BVHAccel.cpp  BoundingBox.cpp  Drawable.cpp  Geometry.cpp  Mesh.cpp  Object.cpp  Primitives.cpp  Sphere.cpp  Triangle.cpp  UMesh.cpp
src/Materials/: FMaterial.cpp  Material.cpp  PhongMaterial.cpp  Shader.cpp  StandardMaterial.cpp  Uniform.cpp
src/OpenGL/: FrameBufferOpenGL.cpp  RendererOpenGL.cpp  ShaderGLSL.cpp  TextureOpenGL.cpp  UniformOpengl.cpp  ViewerOpenGL.cpp
src/RenderPass/: RenderPass.cpp  RenderPassForwardShading.cpp  RenderPassGeometry.cpp  RenderPassLight.cpp  RenderPassPlain.cpp  RenderPassShadow.cpp  RenderPassToScreen.cpp
src/Utils/: ImageUtils.cpp  Logger.cpp  OpenGLUtils.cpp  SRKLogger.cpp  UniversalUtils.cpp  utils.cpp
